# NVIDIA___nemoclaw-community

./: .gitmodules  CONTRIBUTING.md  README.md  SUPPORT.md  THIRD-PARTY-NOTICES
examples/harness-engineering-playground/: .env.example  .gitignore  README.md  pyproject.toml
examples/harness-engineering-playground/docs/: verify-functionality.md
examples/harness-engineering-playground/examples/deepagents/profiles/: nvidia_nemotron_3_ultra_base.py  nvidia_nemotron_3_ultra_manual.py  nvidia_nemotron_3_ultra_ralph.py
examples/harness-engineering-playground/plugins/: hep_profile_plugin.py
examples/harness-engineering-playground/src/hep/: __init__.py  main.py
examples/harness-engineering-playground/src/hep/adapters/: __init__.py  _deepagents_patch.py  base.py  deepagents.py
examples/harness-engineering-playground/src/hep/cli/: __init__.py  langchain.py
examples/harness-engineering-playground/src/hep/optimizers/: __init__.py  _agentic_proposer.py  _proposer_workspace.py  base.py  ralph.py
examples/harness-engineering-playground/tests/unit_tests/: fakes.py  test_agentic_proposer_permissions.py  test_deepagents_adapter.py  test_deepagents_adapter_trial_register.py  test_hep_profile_plugin.py  test_ralph_optimizer.py
examples/personal-community-sentiment-triage/extras/ms-graph-token-manager/: Dockerfile  docker-compose.yml  pyproject.toml
examples/personal-community-sentiment-triage/extras/ms-graph-token-manager/scripts/: authenticate.sh
examples/personal-community-sentiment-triage/extras/ms-graph-token-manager/token_manager/: main.py
(+179 files in other folders)
