# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "hep"
version = "0.1.0"
description = "Harness Engineering Playground — automated, eval-driven harness profile improvement."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
]

[project.scripts]
hep = "hep.main:app"

[project.optional-dependencies]
deepagents = [
    "deepagents>=0.6",
    "langchain",
    "langchain-anthropic",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.uv.sources]
deepagents = { path = "external/deepagents/libs/deepagents", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hep"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
